# katana-lp-bot

./: .env.example  .gitignore  DECISIONS.md  README.md  lp_bot_build_plan.md  pyproject.toml  requirements-termux.txt  requirements.txt
.github/workflows/: monitor.yml
app/: __init__.py  backtest.py  bot.py  chain.py  check_slot0.py  cmdargs.py  config.py  db.py  liquidity.py  merkl.py  migrate.py  monitor.py  positions.py  prices.py  rawlog.py  suggest.py  tickmath.py
deploy/: README.md  setup.sh  termux.md
migrations/: 0001_init.sql  0002_kat_at_open.sql  0003_monitor_state.sql
tests/: test_backtest.py  test_liquidity.py  test_merkl.py  test_monitor.py  test_positions.py  test_suggest.py  test_tickmath.py
