[project]
name = "katana-lp-bot"
version = "0.0.0"
description = "Signal-only LP position tracker for the Katana vbUSDC/vbETH 0.05% pool (Telegram + Neon)."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21,<22",
    "psycopg[binary]>=3.1,<4",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
